# CandyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TestLayer.cpp  TestLayer.hpp  depLinks.ini  main.cpp  vcpkg.json
candy/: CMakeLists.txt
candy/core/base/: CMakeLists.txt  CandyBase.hpp
candy/core/base/debug/: Log.cpp  Log.hpp  Logger.hpp  Profiler.hpp
candy/core/base/general/: CandyAssert.hpp  CandyConcepts.hpp  CandyCoreBase.hpp  PlatformDetection.hpp
candy/core/base/primitive/: CandyString.cpp  CandyString.hpp  KeyCodes.hpp  MouseCodes.hpp  PrimitiveTypes.hpp  RawBuffer.hpp  UUID.cpp  UUID.hpp
candy/core/math/: CMakeLists.txt  CandyMath.hpp
candy/core/math/direction/: Direction2.cpp  Direction2.hpp  Direction3.cpp  Direction3.hpp
candy/core/math/general/: Limit.hpp  MathGeneralAll.hpp  MathOps.hpp  Random.cpp  Random.hpp  Range.hpp
candy/core/math/geometry/: GeometryAll.hpp
candy/core/math/geometry/2d/: Rectangle.cpp  Rectangle.hpp
candy/core/math/linalg/: LinalgAll.hpp  LinalgForwardDef.hpp
candy/core/math/linalg/matrix/: Matrix4.cpp  Matrix4.hpp  MatrixAll.hpp
candy/core/math/linalg/matrix/base/: Matrix.hpp
candy/core/math/linalg/quaternion/: Quaternion.cpp  Quaternion.hpp
candy/core/math/linalg/vector/: Vector2.cpp  Vector2.hpp  Vector2Int.cpp  Vector2Int.hpp  Vector3.cpp  Vector3.hpp  Vector3Int.cpp  Vector3Int.hpp  Vector4.cpp  Vector4.hpp  VectorAll.hpp
candy/core/math/linalg/vector/base/: VectorBase.hpp  VectorExpression.hpp
lib/fontatlas/: CMakeLists.txt  vcpkg.json
lib/fontatlas/include/FontAtlas/: msdf-atlas-gen.hpp  msdfgen.hpp
lib/fontatlas/include/FontAtlas/Atlas/: AtlasGenerator.hpp  AtlasStorage.hpp  AtlasUtfDecode.hpp  BitmapAtlasStorage.hpp  Charset.hpp  DynamicAtlas.hpp  FontAtlasLoader.hpp  FontData.hpp  FontGeometry.hpp  GlyphBox.hpp  GlyphGeometry.hpp  ImmediateAtlasGenerator.hpp  RectanglePacker.hpp  Remap.hpp  TightAtlasPacker.hpp  atlas-gen-types.hpp  bitmap-blit.hpp  csv-export.hpp  glyph-generators.hpp  image-encode.hpp  image-save.hpp  json-export.hpp  rectangle-packing.hpp  shadron-preview-generator.hpp
lib/fontatlas/include/FontAtlas/Field/: Arithmetics.hpp  Bitmap.hpp  BitmapInterpolation.hpp  BitmapRef.hpp  Contour.hpp  ContourCombiners.hpp  EdgeColor.hpp  EdgeColoring.hpp  EdgeHolder.hpp  EdgeSegments.hpp  EdgeSelectors.hpp  EquationSolver.hpp  GeneratorConfig.hpp  MSDFErrorCorrection.hpp  PixelConversion.hpp  Projection.hpp  Rasterization.hpp  RenderSdf.hpp  Scanline.hpp  Shape.hpp  ShapeDescription.hpp  ShapeDistanceFinder.hpp  SignedDistance.hpp  msdf-error-correction.hpp  msdfVec2.hpp  save-bmp.hpp  save-tiff.hpp  sdf-error-estimation.hpp
lib/fontatlas/lib/freetype2/builds/: freetype.mk
lib/fontatlas/lib/freetype2/builds/mac/: ftmac.c
lib/fontatlas/lib/freetype2/builds/unix/: unix-cc.in
lib/fontatlas/lib/freetype2/builds/wince/vc2005-ce/: freetype.vcproj
lib/fontatlas/lib/freetype2/builds/wince/vc2008-ce/: freetype.vcproj
lib/fontatlas/lib/freetype2/builds/windows/visualc/: freetype.dsp  freetype.vcproj
lib/fontatlas/lib/freetype2/builds/windows/visualce/: freetype.dsp  freetype.vcproj
lib/fontatlas/lib/freetype2/devel/: ftoption.h
lib/fontatlas/lib/freetype2/docs/oldlogs/: ChangeLog.23  ChangeLog.26  ChangeLog.27  ChangeLog.28
lib/fontatlas/lib/freetype2/include/freetype/: freetype.h  fterrdef.h  ftmac.h  ftmodapi.h  ftsynth.h
lib/fontatlas/lib/freetype2/include/freetype/config/: ftheader.h  ftoption.h
lib/fontatlas/lib/freetype2/include/freetype/internal/: ftrfork.h  fttrace.h  sfnt.h  tttypes.h  wofftypes.h
lib/fontatlas/lib/freetype2/src/base/: ftbase.h  ftmac.c  ftobjs.c  ftrfork.c  ftver.rc
lib/fontatlas/lib/freetype2/src/cff/: cffobjs.c
lib/fontatlas/lib/freetype2/src/cid/: cidobjs.c  cidparse.c
lib/fontatlas/lib/freetype2/src/sfnt/: ttpost.c
lib/fontatlas/lib/freetype2/src/truetype/: ttobjs.c
lib/fontatlas/lib/freetype2/src/type1/: t1objs.c  t1parse.c
lib/fontatlas/lib/freetype2/src/type42/: t42parse.c
lib/fontatlas/lib/freetype2/src/winfonts/: winfnt.c
lib/fontatlas/src/: msdfgen.cpp
lib/fontatlas/src/atlas/: AtlasUtfDecode.cpp  Charset.cpp  FontAtlasLoader.cpp  FontData.cpp  FontGeometry.cpp  FontLoader.cpp  GlyphGeometry.cpp  RectanglePacker.cpp  TightAtlasPacker.cpp  Workload.cpp  bitmap-blit.cpp  charset-parser.cpp  csv-export.cpp  glyph-generators.cpp  image-encode.cpp  json-export.cpp  shadron-preview-generator.cpp  size-selectors.cpp
lib/fontatlas/src/field/: Contour.cpp  ContourCombiners.cpp  EdgeColoring.cpp  EdgeHolder.cpp  EdgeSegments.cpp  EdgeSelectors.cpp  EquationSolver.cpp  MSDFErrorCorrection.cpp  Projection.cpp  Rasterization.cpp  RenderSdf.cpp  Scanline.cpp  Shape.cpp  ShapeDescription.cpp  SignedDistance.cpp  msdf-error-correction.cpp  msdfVec2.cpp  save-bmp.cpp  save-tiff.cpp  sdf-error-estimation.cpp
lib/imguizmo/: GraphEditor.cpp  GraphEditor.h  ImCurveEdit.cpp  ImCurveEdit.h  ImGradient.cpp  ImGuizmo.cpp  ImSequencer.cpp
lib/vke/: descriptor_allocator.cpp  descriptor_allocator.h
lib/vma/: vk_mem_alloc.h
license/: LICENSE.spdlog  LICENSE.spirvcross  credits.txt
resources/shaders/: TestShader.glsl
sandbox/: CMakeLists.txt  ChunkRenderer.cpp  ChunkRenderer.hpp  ExampleLayer.cpp  ExampleLayer.hpp
sandbox/resources/shaders/: lightVertexShader.glsl  vertexShader.glsl
script-core/: InternalCalls.cs  Vector2.cs
sugar/: CMakeLists.txt
sugar/SandboxProject/: Sandbox.cproj
sugar/SandboxProject/Assets/Scenes/: ExampleScene.candy
sugar/SandboxProject/Assets/Scripts/: CMakeLists.txt
sugar/SandboxProject/Assets/Shaders/: fragShader.glsl  lightFragShader.glsl
sugar/src/: EditorLayer.cpp  EditorLayer.hpp  SugarApp.cpp
sugar/src/panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
tools/: Dependencies.exe - Shortcut.lnk  DependenciesGui.exe - Shortcut.lnk  Nsight Graphics 2023.3.1 (2).lnk  Nsight Systems 2023.3.1 (2).lnk  Profetto.ps1
tools/config/: config.txt
tools/grammer/: GLSL.g4  GLSL.interp  GLSL.tokens  GLSLBaseListener.cpp  GLSLBaseListener.h  (+12 more)
(+748 files in other folders)
